done for the night'

--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -11,6 +11,11 @@
   </header>
 
   <form action="/searches" method="POST"></form>
+  <fieldset>
+    <legend>Title/Author</legend>
+    <input type="text" name = "query-type" placeholder= "Title or Author">
+    
+  </fieldset>
   
   
   
