got somethin done

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,10 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  <header>
-  </header>
 
-  <form action="/searches" method="POST"></form>
+  <p>Book Search</p>
+
+  <a href="/searches/new">Here</a>
   
   
   
