--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
 
   <p>Book Search</p>
   <p>Book Count :<%= rowCount%></p>
-  <a href="/pages/searches/new">Here</a>
+  <a href="/searches">Search</a>
   <ul>
     <% collection.forEach(book => { %>
       <li>
@@ -18,6 +18,7 @@
         <p><%=book.author %></p>
         <p><%=book.description %></p>
         <img src="<%= book.image_url %>" >
+        <a href="/books/<%=book.id%>">BUTTOn</a>
     </li>
     <% }) %>
   </ul>
